# cno-cli

./: .gitignore  .gitmodules  AGENT.md  CMakeLists.txt  build.ps1  build.sh  package.json  readme.md  showargs.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
cmake/: stage_dlls.cmake
docs/: README.md  api-surfaces.md  architecture.md  build-test.md  cli.md  compatibility.md  deno-tests-coverage.md  inspector.md  module-loading.md  native-extensions.md  polyfills.md
scripts/: bundle.mjs  capture-console-cdp.mjs
src/: bootstrap.ts  cli.ts  help.ts  main.ts  network.ts  utils.ts  version.ts
src/commands/: bin.ts  cache-utils.ts  cache.ts  eval.ts  inspect.ts  node-options.ts  run.ts  setup.ts  task.ts  test.ts
src/commands/repl/: index.ts  runner.ts
src/inspector/: bridge.ts  index.ts
src/inspector/domains/: base.ts  console.ts  debugger.ts  fetch.ts  network.ts  page.ts  protocol.ts  runtime.ts  side-effect.ts  target.ts
src/inspector/main/: evaluator.ts  hooks.ts  inspector.ts  object-store.ts  pause-controller.ts  remote-object.ts  rpc-handlers.ts
src/inspector/shared/: cdp.ts  console-utils.ts  native.ts  rpc-contract.ts  user-files.ts  wire.ts
src/inspector/transport/: channel-rpc.ts  main-endpoint.ts  pipe-rpc.ts  worker-endpoint.ts
src/inspector/worker/: bootstrap.ts  connection.ts  dispatcher.ts  event-router.ts  server.ts
tests/: README.md  tmp-sucrase-repro.test.ts
tests/_helpers/: bytes.ts  network.ts  temp.ts
tests/cjs/: createRequire.test.ts  require-esm-interop.test.ts
tests/cjs/fixtures/async-esm-with-sync-export/: async.mjs  package.json
tests/cjs/fixtures/circular-cjs/: a.cjs  b.cjs
tests/cjs/fixtures/cjs-dynamic-import-function/: entry.cjs
tests/cjs/fixtures/cjs-exports-shape/: escaped-whitespace-keys.cjs  exports-shape.cjs  invalid-name-exports.cjs  module-export-assignment.cjs  module-exports-key.cjs  static-import-module-export-assignment.mjs  this-in-exports.cjs
tests/cjs/fixtures/cjs-jsdoc-import-function-prototype/: function-call.cjs
tests/cjs/fixtures/cjs-require-esm/: package.json  vite.config.js
tests/cjs/fixtures/esm-esmodule-bridge/: transpiled.cjs
tests/cjs/fixtures/esm-module-exports/: add.mjs  mod1.cjs  mod2.cjs  string.mjs  undefined.mjs
tests/cts/: cache-command.test.ts  cli-stage.test.ts  cli-utils.test.ts  config-resolver.test.ts  http-core.test.ts  import-attributes-runtime.test.ts  inspector-console-stack.test.ts  inspector-main-transport.test.ts  inspector-network-stack.test.ts  inspector-shared.test.ts  linker.test.ts  loader.test.ts  lock-bin.test.ts  node-protocol.test.ts  protocol-source-cache.test.ts  runtime-utils.test.ts  scan-pkg.test.ts  task-shell.test.ts  transform-exports.test.ts
tests/cts/fixtures/cts-pkg-exports/: package.json
tests/deno/: command-upstream-compat.test.ts  cron.test.ts  error-stack-upstream.test.ts  error-stdio-upstream.test.ts  ffi-pointer.test.ts  fs-command.test.ts  fs-file.test.ts  fs-upstream-compat.test.ts  fs-watch-upstream-compat.test.ts  global.test.ts  kv.test.ts  os-runtime-upstream.test.ts  permissions-errors.test.ts  process-net-edge.test.ts  serve.test.ts  signal-upstream.test.ts  test-harness.test.ts  tls.test.ts
tests/deno/targets/: serve.target.ts
tests/jsr/: deno-dom.test.ts  hono.test.ts
tests/node/: assert.test.ts  async-hooks.test.ts  buffer-path.test.ts  cdp-debugger.test.ts  cdp-discovery.test.ts  cdp-paused-stack.test.ts  cdp-protocol.test.ts  child-process.test.ts  cluster-domain.test.ts  cluster-trace-events.test.ts  console.test.ts  constants.test.ts  crypto-edge.test.ts  dgram-edge.test.ts  dgram.test.ts  diagnostics-channel.test.ts  dns.test.ts  domain.test.ts  events-edge.test.ts  fs-edge.test.ts  fs-filehandle.test.ts  fs-promises.test.ts  fs-stream-proc.test.ts  fs-watch.test.ts  fs-write-overloads.test.ts  http-adapter-edge.test.ts  http-incoming.test.ts  http-net-edge.test.ts  http2-constants.test.ts  https.test.ts  inspect-flags.test.ts  inspector.test.ts  ipc-channel.test.ts  module.test.ts  net-socket-state.test.ts  os-util.test.ts  path-edge.test.ts  perf-hooks.test.ts  process.test.ts  punycode.test.ts  (+23 more)
tests/node/targets/: cdp-discovery.target.ts  cdp-pause-stack.target.ts  check-oxc.target.ts  worker.target.ts
tests/npm/: app-stack.test.ts  build-more.test.ts  build-tools.test.ts  cli-tools.test.ts  config-more.test.ts  config-utils-crypto.test.ts  ecosystem-more.test.ts  fetch-clients.test.ts  matching-utils.test.ts  native-bindings-root.test.ts  native-ffi-zeromq.test.ts  native-prebuild-deps.test.ts  native-prebuild-more.test.ts  network-utils.test.ts  node-pty.test.ts  runner-tools.test.ts  server-frameworks.test.ts  test-config-runners.test.ts  tty-storage-utils.test.ts  utils-crypto-more.test.ts  validation-storage-more.test.ts  ws.test.ts
tests/webapi/: abort.test.ts  basic.test.ts  cache.test.ts  cno-api.test.ts  cno-native-modules.test.ts  console-upstream.test.ts  events.test.ts  eventsource.test.ts  fetch-objects-upstream.test.ts  fetch-streams.test.ts  file-reader-image-data-upstream.test.ts  formdata-blob.test.ts  intl.test.ts  location.test.ts  locks-broadcast.test.ts  locks.test.ts  message-channel.test.ts  messaging.test.ts  perf-storage-nav.test.ts  proxy-transport.test.ts  scheduler.test.ts  storage.test.ts  streams-deep.test.ts  text-encoding-upstream.test.ts  upstream-compat.test.ts  url-deep.test.ts  urlpattern.test.ts  urlsearchparams-upstream.test.ts  wasm.test.ts  webcrypto-subtle.test.ts  websocket.test.ts  worker.test.ts  xhr.test.ts
